--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -6,8 +6,9 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .logo-name{
-    font-family: fangsong;
-    font-size: 20px;
+    font-family: cursive !important;
+    font-size: 16px;
+    align-items: center;
 }
 .imgLogo{
     position: relative;
